apps/zwavejs-ui/the-intersect/lb-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zwavejs-ui-lb
  namespace: zwavejs-ui
  labels:
    app: zwavejs-ui
    service: zwavejs-ui-lb
spec:
  type: LoadBalancer
  selector:
    app: zwavejs-ui
  ports:
    - name: websocket
      port: 3000
      protocol: TCP
      targetPort: 3000
  sessionAffinity: None
