apps/zwavejs-ui/the-intersect/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zwavejs-ui
  namespace: zwavejs-ui
  labels:
    app: zwavejs-ui
spec:
  selector:
    app: zwavejs-ui
  ports:
    - name: zwavejs
      port: 3000
      targetPort: 3000
      protocol: TCP
      appProtocol: kubernetes.io/ws
    - name: ui
      port: 8091
      targetPort: 8091
      protocol: TCP
  type: ClusterIP
