apps/zwavejs-ui/the-intersect/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zwavejs-ui-httproute
  namespace: zwavejs-ui
spec:
  parentRefs:
    - name: internal-gateway-http
      namespace: cilium-ingress
  hostnames: ["${SUB_IRON_REACH}.${DOMAIN_COBRA_LANTERN}"]
  rules:
    - backendRefs:
        - name: zwavejs-ui
          port: 8091
          # protocol: TCP
          # appProtocol: kubernetes.io/ws
